TINY-8333: Corrected some broken styles for the old component

--- a/modules/oxide/src/less/theme/components/image-tools/image-tools.less
+++ b/modules/oxide/src/less/theme/components/image-tools/image-tools.less
@@ -24,6 +24,19 @@
   }
 
   /* old component styles */
+  .tox-image-tools-edit-panel {
+    height: 60px;
+  }
+
+  .tox-image-tools__sidebar {
+    height: 60px;
+  }
+
+  .tox-image-tools__toolbar {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
 
   .tox-image-tools__image {
     background-color: #666;
